--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /server/node_modules
+/client/node_modules
 /.pnp
 .pnp.js
 
@@ -21,4 +22,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-client/
