--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 /server/node_modules
-/server/.env
 /client/node_modules
 /.pnp
 .pnp.js
@@ -23,3 +22,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.env
